# select-save

./: Cargo.toml  README.md
src/: cursor.rs  extractor.rs  internal.rs  lib.rs  manager.rs
src/manager/: message.rs  mod.rs  selectgame.rs  selectsave.rs
src/scene/: message.rs  mod.rs  selectgame.rs  selectsave.rs  selectstring.rs
src/ui/: list.rs  mod.rs  screen.rs
