[package]
name = "select-save"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"
panic = "abort"
lto = "fat"
codegen-units = 1

[profile.dev]
strip = "debuginfo"
lto = "off"
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.select-save]
opt-level = 0

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
itertools = "0.13.0"
rand = "0.8.5"
regex = { version = "1.10.5", default-features = false, features = ["perf", "std"] }
sdl2 = { version = "0.37.0", features = ["ttf", "image"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
walkdir = "2.5.0"
