[package]
name = "select-save"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"
panic = "abort"
lto = "fat"
codegen-units = 1

[profile.dev]
strip = "debuginfo"
lto = "off"
debug = 0

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.select-save]
opt-level = 0

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive", "env"] }
gag = "1.0.0"
itertools = "0.14.0"
rand = "0.9.1"
regex = { version = "1.11.1", default-features = false, features = ["perf", "std"] }
sdl2 = { version = "0.37.0", features = ["ttf", "image"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = { version = "0.1.41", features = ["release_max_level_info"] }
walkdir = "2.5.0"
evdev = "0.13.1"
